[gd_scene load_steps=3 format=3 uid="uid://dd6jajox32qgs"]

[ext_resource type="Script" uid="uid://bsaehikt3vvht" path="res://ui/loot_reveal_ui.gd" id="1_abrv7"]
[ext_resource type="FontFile" uid="uid://dmebi7ig6ljst" path="res://poco/Poco.ttf" id="2_rwpai"]

[node name="LootRevealUI" type="CanvasLayer"]
script = ExtResource("1_abrv7")

[node name="DimBackground" type="ColorRect" parent="."]
custom_minimum_size = Vector2(500, 300)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.20392157, 0.20392157, 0.20392157, 0.44313726)

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(500, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ItemNameLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_rwpai")
theme_override_font_sizes/font_size = 36
text = "ITEM NAME"

[node name="ItemDescriptionLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_rwpai")
theme_override_font_sizes/font_size = 20
text = "Item Description Goes here"

[node name="ClaimButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_rwpai")
theme_override_font_sizes/font_size = 28
text = "Claim Reward
"
